force-app/main/default/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <description>2014-02-19 AusPost Merchant Service

Application record will only be created from visualforce page. Due to the stylesheet requirement, all the field level validation is on the visualforce page.

Visualforce page uses either field level label or field level help text (if the vf field label is very long)</description>
    <label>APMS Application</label>
    <nameField>
        <displayFormat>SOP-{00000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>APMS Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>