force-app/main/default/objects/Application__c/fields/AverageValueOfEachSalesHistoric__c.field-meta.xml
<CustomField>
    <fullName>AverageValueOfEachSalesHistoric__c</fullName>
    <description>User to input - Average value of each sales transaction - historic</description>
    <inlineHelpText>Average value of each transaction</inlineHelpText>
    <label>Average Value Of Each Sales - Historic</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>