force-app/main/default/objects/Application__c/fields/CCChargedInAdvanceDaysInAdvance__c.field-meta.xml
<CustomField>
    <fullName>CCChargedInAdvanceDaysInAdvance__c</fullName>
    <description>Payments made in advance, where the cardholder is charged prior to receiving goods or service - Days Paid in Advance</description>
    <inlineHelpText>Payment received in advance of customer receiving goods/services</inlineHelpText>
    <label>CC Charged In Advance - Days In Advance</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>