force-app/main/default/objects/Application__c/fields/CCSameDayProcessingPercentage__c.field-meta.xml
<CustomField>
    <fullName>CCSameDayProcessingPercentage__c</fullName>
    <description>Credit card purchases for product or service received &amp; processed same day as purchase - Percentage</description>
    <inlineHelpText>Payment received and processed the same day as purchase made</inlineHelpText>
    <label>CC Same Day Processing - Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>