force-app/main/default/objects/Application__c/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <description>Mapped from the form the Business Contact in &quot;2. Contact &amp; Signatories&quot; section.</description>
    <inlineHelpText>An email will be sent to the email address entered. The application is not allowed to progress further until the validation is completed.</inlineHelpText>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>