force-app/main/default/objects/Application__c/fields/ContactSignatoryEmail1__c.field-meta.xml
<CustomField>
    <fullName>ContactSignatoryEmail1__c</fullName>
    <description>User to input - Signatory email address is used to email Contacts to the Signatories for execution.</description>
    <inlineHelpText>Email address</inlineHelpText>
    <label>Principal 1 Signatory</label>
    <type>Email</type>
</CustomField>