force-app/main/default/objects/Application__c/fields/EBTName__c.field-meta.xml
<CustomField>
    <fullName>EBTName__c</fullName>
    <inlineHelpText>EBT_Name (ReD GardShield Ruleset/Channel Identifier)</inlineHelpText>
    <label>ReD Fraud Segmentation Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>