force-app/main/default/objects/Application__c/fields/Existing_Customer_Adding_Multicurrency__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer_Adding_Multicurrency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a new field to handle multi-currency feature in secure pay on platform.</description>
    <label>Existing Customer Adding Multicurrency</label>
    <type>Checkbox</type>
</CustomField>