force-app/main/default/objects/Application__c/fields/IsAbnOrAcnProvided__c.field-meta.xml
<CustomField>
    <fullName>IsAbnOrAcnProvided__c</fullName>
    <formula>OR(
  LEN(ABN__c) &gt; 0,
  LEN(ACN__c) &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN or ACN Provided?</label>
    <type>Checkbox</type>
</CustomField>