force-app/main/default/objects/Application__c/fields/IsMailingDiffToLocation__c.field-meta.xml
<CustomField>
    <fullName>IsMailingDiffToLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check this box if mailing address is different to Location Address</description>
    <inlineHelpText>I have a different business mailing address</inlineHelpText>
    <label>Mailing Is Different To Location Address</label>
    <type>Checkbox</type>
</CustomField>