force-app/main/default/objects/Application__c/fields/isProcessPaymentsForAnotherBusiness__c.field-meta.xml
<CustomField>
    <fullName>isProcessPaymentsForAnotherBusiness__c</fullName>
    <description>Do you process payments on behalf of another business?</description>
    <inlineHelpText>Do you process payments on behalf of another business?</inlineHelpText>
    <label>Process Payments For Another Business?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>