force-app/main/default/objects/Application__c/fields/PricingPlan__c.field-meta.xml
<CustomField>
    <fullName>PricingPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Plan</label>
    <referenceTo>PricingPlan__c</referenceTo>
    <relationshipLabel>APMS Applications</relationshipLabel>
    <relationshipName>APMSApplications</relationshipName>
    <type>Lookup</type>
</CustomField>