force-app/main/default/objects/Application__c/fields/Principal1Country__c.field-meta.xml
<CustomField>
    <fullName>Principal1Country__c</fullName>
    <description>2014-08 APMS</description>
    <label>Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>