force-app/main/default/objects/Application__c/fields/Principal1DriverLicenceNumber__c.field-meta.xml
<CustomField>
    <fullName>Principal1DriverLicenceNumber__c</fullName>
    <description>User to input - numeric</description>
    <label>Driver&apos;s Licence Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>