force-app/main/default/objects/Application__c/fields/Principal1PositionTitleOther__c.field-meta.xml
<CustomField>
    <fullName>Principal1PositionTitleOther__c</fullName>
    <description>User to input</description>
    <inlineHelpText>Please enter a position title</inlineHelpText>
    <label>Position - Other</label>
    <length>20</length>
    <type>Text</type>
</CustomField>