force-app/main/default/objects/Application__c/fields/Principal1UnitNo__c.field-meta.xml
<CustomField>
    <fullName>Principal1UnitNo__c</fullName>
    <description>User to input</description>
    <label>Unit No</label>
    <length>5</length>
    <type>Text</type>
</CustomField>