force-app/main/default/objects/Application__c/fields/SecurePayMerchantID__c.field-meta.xml
<CustomField>
    <fullName>SecurePayMerchantID__c</fullName>
    <description>Alpha numeric 3 spaces only e.g. 1TH, RTH</description>
    <label>SecurePay Merchant ID</label>
    <length>3</length>
    <type>Text</type>
</CustomField>