force-app/main/default/objects/Application__c/fields/SelectedPricePlan__c.field-meta.xml
<CustomField>
    <fullName>SelectedPricePlan__c</fullName>
    <inlineHelpText>Selected plan:</inlineHelpText>
    <label>Selected Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Launch Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>