force-app/main/default/objects/Application__c/fields/ShoppingCartCalc__c.field-meta.xml
<CustomField>
    <fullName>ShoppingCartCalc__c</fullName>
    <formula>IF(ISPICKVAL(ShoppingCart__c, &quot;Other&quot;), ShoppingCartOther__c, TEXT(ShoppingCart__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shopping Cart [Calc]</label>
    <type>Text</type>
</CustomField>