force-app/main/default/objects/Application__c/fields/TotalAnnualTurnoverHistoric__c.field-meta.xml
<CustomField>
    <fullName>TotalAnnualTurnoverHistoric__c</fullName>
    <description>User to input - Total Annual Business Turnover (including cash, cheques, cards etc)</description>
    <inlineHelpText>Total Annual Business turnover</inlineHelpText>
    <label>Total Annual Turnover - Historic</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>