force-app/main/default/objects/Application__c/fields/Trustee1__c.field-meta.xml
<CustomField>
    <fullName>Trustee1__c</fullName>
    <description>User to input</description>
    <inlineHelpText>Name of trustee</inlineHelpText>
    <label>Trustee 1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>