force-app/main/default/objects/Application__c/validationRules/Approved_for_Multicurrency_Enabled.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_for_Multicurrency_Enabled</fullName>
    <active>true</active>
    <description>This is a new validation rule kept in place to ensure all the mandatory fields are entered correctly if the Approved for Multi-currency checkbox is enabled.</description>
    <errorConditionFormula>Multicurrency_Risk_Assessment_Complete__c = true &amp;&amp; 
(ISNULL(Avg_Foreign_Currency_Transaction_Value__c )  || ISNULL(Avg_Foreign_Currency_Transactions_Mthly__c) || 
ISNULL(Annual_Foreign_Currency_Turnover__c))</errorConditionFormula>
    <errorMessage>Please ensure all Avg Foreign Currency Transaction Value,Avg Foreign Currency Transactions Monthly and Annual Foreign Currency Turnover fields have valid values.</errorMessage>
</ValidationRule>