force-app/main/default/objects/Application__c/validationRules/Decided_by_Risk_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Decided_by_Risk_Rule</fullName>
    <active>true</active>
    <description>User must enter Decided by Risk date when Opportunity Date is Proposed, Closed Lost, Closed Disqualified or Closed Duplicate</description>
    <errorConditionFormula>ISNULL( Decided_by_Risk__c ) &amp;&amp;
IsWelcomePackSent__c = FALSE &amp;&amp;
Opportunity__r.IsAPMSApplication__c = TRUE &amp;&amp;
(
OR (
(ISPICKVAL( Opportunity__r.StageName, &apos;Propose&apos; )),
(ISPICKVAL( Opportunity__r.StageName, &apos;Closed Lost&apos; )),
(ISPICKVAL( Opportunity__r.StageName, &apos;Closed Disqualified&apos; )),
(ISPICKVAL( Opportunity__r.StageName, &apos;Closed Duplicate&apos; ))
))</errorConditionFormula>
    <errorDisplayField>Decided_by_Risk__c</errorDisplayField>
    <errorMessage>Please enter date when application has been decided by Risk</errorMessage>
</ValidationRule>