force-app/main/default/objects/Application__c/validationRules/MCC_4_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>MCC_4_Digits</fullName>
    <active>true</active>
    <description>2014-10 APMS</description>
    <errorConditionFormula>AND
(
  (NOT ISBLANK(MCC__c)),
  OR 
  (
    (NOT ISNUMBER(MCC__c)),
    (LEN(MCC__c)&lt;4),
    (CONTAINS(MCC__c, &quot;.&quot;))
  )
)</errorConditionFormula>
    <errorDisplayField>MCC__c</errorDisplayField>
    <errorMessage>Merchant Category Code must contain 4 digits.</errorMessage>
</ValidationRule>