force-app/main/default/objects/Application__c/validationRules/Submitted_to_Risk_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_to_Risk_Rule</fullName>
    <active>true</active>
    <description>User must enter Submitted to Risk date when Bank Statements are received</description>
    <errorConditionFormula>ISNULL(Submitted_to_Risk__c ) &amp;&amp;
IsWelcomePackSent__c = FALSE &amp;&amp;
Opportunity__r.IsAPMSApplication__c = TRUE &amp;&amp;
(ISPICKVAL(Opportunity__r.Bank_statements__c, &apos;Received&apos;))</errorConditionFormula>
    <errorDisplayField>Submitted_to_Risk__c</errorDisplayField>
    <errorMessage>Please enter date when application has been submitted to Risk</errorMessage>
</ValidationRule>