force-app/main/default/objects/Application__c/listViews/All_Applications.listView-meta.xml
<ListView>
    <fullName>All_Applications</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>OrganisationType__c</columns>
    <columns>NameOnCCStatement__c</columns>
    <columns>Opportunity__c</columns>
    <columns>PricingPlan__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Applications</label>
    <language>en_US</language>
</ListView>